# ctag-tbd

./: .gitignore  .gitmodules  CLA.md  CMakeLists.txt  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  HARDWARE_CONFIGURATIONS.md  LICENSE  README.md  SECURITY.md  THIRD-PARTY.md  sdkconfig.defaults
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
docs/: CONTRACT-PICO.md  LICENSE-HEADER-AUDIT.md  faq.rst  index.rst  uxguidelines.rst
generators/: RackTemplateDrum.cpp  RackTemplateDrum.hpp  RackTemplateSynth.cpp  RackTemplateSynth.hpp  generator.js  rack-template.json  rackgen.js  readme.md
main/: BootManifest.hpp  CMakeLists.txt  DeviceAPI.cpp  DeviceAPI.hpp  EngineDefinition.hpp  EngineDefinitionDataModel.cpp  EngineDefinitionDataModel.hpp  Favorites.cpp  Favorites.hpp  FavoritesModel.cpp  FavoritesModel.hpp  Kconfig.projbuild  MacroAPI.cpp  MacroAPI.hpp  MacroDefinition.hpp  MacroDeviceDefinition.cpp  MacroDeviceDefinition.hpp  MacroDeviceDefinitionDataModel.cpp  MacroDeviceDefinitionDataModel.hpp  MacroSPManager.cpp  MacroSoundPreset.cpp  MacroSoundPreset.hpp  MacroSoundPresetDataModel.cpp  MacroSoundPresetDataModel.hpp  MacroTranslator.cpp  MacroTranslator.hpp  OtaAPI.cpp  OtaAPI.hpp  PluginAPI.cpp  PluginAPI.hpp  RestServer.cpp  RestServer.hpp  SPManager.cpp  SPManagerDataModel.cpp  SampleAPI.cpp  SampleAPI.hpp  SpiAPI.cpp  SpiAPI.hpp  SpiProtocol.h  SpiProtocolHelper.cpp  (+10 more)
simulator/: CMakeLists.txt  SimSPManager.cpp  SimSPManager.hpp  WebServer.cpp
tests/sdmmc_stress/components/sdmmc_bounce/: CMakeLists.txt  custom_sdmmc_cmd.cpp
(+203 files in other folders)
